# DeMTRL_MultiGaitControl

./: README.md
raisimGymTorch/: CMakeLists.txt  main.py  play.py  train.py  train_args.yaml
raisimGymTorch/algorithms/algorithm/: rMAPPOPolicy.py  r_actor_critic.py  r_mappo.py
raisimGymTorch/algorithms/ppo/: module.py  ppo.py  storage.py
raisimGymTorch/algorithms/utils/: act.py  distributions.py  distributions_back.py  mlp.py  popart.py  rnn.py
raisimGymTorch/env/: Common.hpp  RaisimGymEnv.hpp  RaisimGymVecEnv.py  Reward.hpp  VectorizedEnvironment.hpp  raisim_gym.cpp
raisimGymTorch/env/envs/multigait_laikago/: CPG.hpp  Environment.hpp  cfg.yaml  gym_torch_gait.py  mt_env.py  reference_bound.hpp  reference_pace.hpp  reference_trot.hpp  reference_walk.hpp  runner.py  tester.py
raisimGymTorch/env/urdf/laikago/: laikago.urdf
raisimGymTorch/helper/: raisim_gym_helper.py
raisimGymTorch/models/multi_gaits/: actor_agent0.pt  actor_agent1.pt
raisimGymTorch/runner/: __init__.py  base_runner.py  env_runner.py
raisimGymTorch/utils/: common.py  separated_buffer.py  util.py
